# spaceship-operator

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/01_comparison/: CMakeLists.txt  main.cpp
src/02_placeholder_types/: CMakeLists.txt  main.cpp
src/03_concepts/: CMakeLists.txt  main.cpp
src/04_concepts_detail/: CMakeLists.txt  main.cpp
src/05_standard_concepts/: CMakeLists.txt  main.cpp
src/06_ranges_views/: CMakeLists.txt  main.cpp
src/07_range_utilities/: CMakeLists.txt  main.cpp
src/08_view_types/: CMakeLists.txt  main.cpp
src/09_spans/: CMakeLists.txt  main.cpp
src/10_format/: CMakeLists.txt  main.cpp
src/11_chrono/: CMakeLists.txt  main.cpp
src/12_jthread/: CMakeLists.txt  main.cpp
src/13_concurrency/: CMakeLists.txt  main.cpp
src/14_coroutines/: CMakeLists.txt  main.cpp
src/15_coroutine_detail/: CMakeLists.txt  main.cpp
src/16_modules/: CMakeLists.txt  main.cpp
src/17_lambda_extensions/: CMakeLists.txt  main.cpp
src/18_compile_time/: CMakeLists.txt  main.cpp
src/19_nttp_extensions/: CMakeLists.txt  main.cpp
src/20_type_traits/: CMakeLists.txt  main.cpp
src/21_core_improvements/: CMakeLists.txt  main.cpp
src/22_generic_improvements/: CMakeLists.txt  main.cpp
src/23_stdlib_improvements/: CMakeLists.txt  main.cpp
src/24_deprecated_removed/: CMakeLists.txt  main.cpp
